# mm-edge-infer-accel

./: .gitignore  README.md  pyproject.toml
configs/: README.md
configs/vla/: pi05_libero.yaml  pi05_libero_plan.yaml
configs/vlm/: qwen3vl_4b_awq_local.yaml  qwen3vl_4b_bf16.yaml  qwen3vl_4b_gptq_local.yaml  smolvlm2_2b_fp32.yaml
csrc/pi05_ops/: denoise_update.cpp  denoise_update_kernel.cu
mm_edge_infer_accel/: __init__.py  cli.py  common.py  config.py  datasets.py  env.py  metrics.py  pi05_optimizations.py  pi05_runtime.py  profiling.py  vla.py  vla_lerobot.py  vlm.py
mm_edge_infer_accel/pi05_kernels/: __init__.py  fallback.py
mm_edge_infer_accel/quantization/: __init__.py  qwen3vl_calibration.py  qwen3vl_llmcompressor.py
mm_edge_infer_accel/runners/: __init__.py  vllm_runner.py
reports/: pi05_lerobot_libero_action_inference_rtx3080ti.md  pi05_lerobot_libero_action_stability_sweep_rtx3080ti.md  pi05_lerobot_reference_profiling_rtx3080ti.md  pi05_libero_action_inference.md  pi05_libero_action_stability_sweep.md  pi05_orin_flashrt_experiment_report.md  pi05_prefix_kv_cache_optimization_rtx3080ti.md  pi05_reference_profiling.md  qwen3vl_2b_bf16_nsys_stratified100.md  qwen3vl_4b_vllm_bf16_comparison.md  qwen3vl_4b_vllm_concurrency_curve.md
scripts/: export_libero_npz.py  profile_pi05_torch.py  quant_qwen3vl4b_llmcompressor.py  run_pi05_action_inference.py  sweep_pi05_inference_steps.py
tests/: test_analysis.py  test_cli.py  test_config.py  test_config_validation.py  test_datasets.py  test_pi05_optimizations.py  test_quantization.py  test_reporting.py
(+3 files in other folders)
